refactored to controllerAs syntax

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
 
-    <div data-ng-controller="navigation" data-ng-include="'partials/navigation.html'"></div>
+    <div data-ng-controller="NavigationCtrl as nav" data-ng-include="'partials/navigation.html'"></div>
     <div class="container">
         <div data-ng-view></div>
     </div>
